hphp/test/zend/good/ext/openssl/tests/bug38261.php.expectf
bool(false)
bool(false)
bool(false)

Warning: openssl_x509_parse() expects at least 1 positional parameter, 0 given in %s on line 16
bool(false)

Catchable fatal error: Object of class stdClass could not be converted to string in %s on line 18
